# QTrader-examples

./: .gitignore  LICENSE  QTRADER_README.md  README.md  makefile  pyproject.toml
.github/instructions/: copilot-instructions.md
.github/prompts/: commit.prompt.md
config/: data_sources.yaml  qtrader.yaml
data/sample-csv/: AAPL.csv  README.md
data/us-equity-yahoo-csv/: universe.json
experiments/buy_hold/: README.md  buy_hold.yaml
experiments/sma_crossover/: README.md  sma_crossover.yaml
experiments/template/: README.md  template.yaml
experiments/weekly_monday_friday/: README.md  weekly_monday_friday.yaml
