[project]
name = "qtrader-examples"
version = "0.1.0"
description = "Examples for using the QTrader library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["qtrader"]


[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mdformat>=0.7.22,<0.8",
    "mdformat-gfm>=0.3.5",
    "mdformat-tables>=0.4.1",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
    "types-pytz>=2025.2.0.20251108",
]

[tool.uv.sources]
qtrader = { git = "https://github.com/QuantSpaceGit/QTrader.git" }
